--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.topic-header {
+    font-weight: bold;
+    font-size: 1.1em;
+    color: #1460AA;
+}
+
 .header-2 {
     color: #1460AA;
     font-weight: 700;
