introduced BEM class names, box model
M04 homework

--- a/style.css
+++ b/style.css
@@ -1,47 +1,79 @@
 /* normalizacja - BEGIN */
 html {
     box-sizing: border-box;
-    }
+    font-size: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
+
 /* normalizacja - END */
 
 body {
     background-color: #faf7f7;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-
-main, .main-nav, footer {
+main,
+.main-nav,
+footer {
     padding: 0 5vw;
 }
 
-.topic-header {
-    font-weight: bold;
-    font-size: 1.1em;
-    color: #1460AA;
+.page-title {
+    font-size: 1.8rem;
+    font-weight: 800;
+    color: #770804;
 }
 
-.header-2 {
-    color: #1460AA;
+.section {
+    background-color: #ffebeb;
+    padding: 1% 2%;
+    margin-bottom: 2vw;
+    overflow: auto;
+}
+
+.section__title {
+    font-size: 1.4rem;
     font-weight: 700;
+    color: #0a8f38;
 }
 
-.header-3 {
-    color: #9a0e28;
-    font-weight: 500;
+.article {
+    background-color: #ddece7;
+    padding: 1% 2%;
+    margin: 20px auto;
+    display: block;
+    max-width: 75vw;
+    min-width: 200px;
+    min-height: 150px;
 }
 
-.main-nav a {
-    color: rgb(23, 116, 26);
+.article__title {
+    font-weight: 700;
+    font-size: 1.1rem;
+    color: #1460AA;
+}
+
+.article__title--special {
+    color: #c6256d;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.navigation__link {
+    color: rgb(152, 29, 201);
+}
+
+.navigation {
+    background-color: bisque;
 }
 
 .main-nav {
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: bisque;
 }
 
 .code {
