--- a/style.css
+++ b/style.css
@@ -46,6 +46,21 @@ body {
     padding: 10px 0px;
 }
 
+.go-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #1460AA;
+    padding: 10px 10px;
+    border-radius: 10%;
+}
+
+.go-to-top .link {
+    color: white;
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+
 main, footer {
     padding: 0 5vw;
     max-width: 768px;
