--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ main, footer {
 
 .navigation {
     background-color: bisque;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
 }
 
 .page-header {
